--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,9 +4,42 @@ output:
   html_document:
     keep_md: true
 ---
-
+## Peer-graded Assignment: Course Project 1
 
 ## Loading and preprocessing the data
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+
+
+This document contains activity monitoring in 5 minute intervals thoughout the day. The data will look to show histogram data for number of steps per day, average steps per interval in both the current dataset as well as a dataset with imputed data.  This study will also explore the differnces in weekday activity vs weekend data on the imputed data.  
+
+The script will line of code will bring in the data from the URL listed  and store the data in your current working directory in its own folder named Activity Monitoring. You will notice from the head that there are NA values returned in the data set.  
+
+[Activity Data](https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip)
+
+```{r cars}
+#code to create folder in current working directory
+if(!file.exists("./Activity Monitoring")){dir.create("./Activity Monitoring")}
+
+##variable to save the url to data  
+fileurl <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+
+##downloadfile from URL and store in folder Activity Monitoring
+download.file(fileurl,destfile="./Activity Monitoring/AMdata.zip", method = "curl")
+
+##unzip folder command
+unzip(zipfile="./Activity Monitoring/AMdata.zip", exdir="./Activity Monitoring")
+
+
+data<-read.csv("./Activity Monitoring/activity.csv", header=TRUE)
+
+head(data)
+
+```
 
 
 
@@ -14,12 +47,156 @@ output:
 
 
 
+
+The first script in the code will format the data into groups by day removing the NA values and print the head of the data. Note that this ends in many days with 0 steps as a result of the NAs in the data set
+
+```{r steps by day, echo=TRUE}
+library(dplyr)
+library(ggplot2)
+library(tidyr)
+
+datagroup<- data %>% 
+  group_by(date) %>% 
+  summarise(sum= sum(steps, na.rm=TRUE))
+
+head(datagroup)
+```
+
+The below script produces a histogram of the total steps by day with verticle lines in the location of the mean and the median of the data set.
+
+```{r histogram, echo=TRUE}
+g<-qplot(datagroup$sum, geom="histogram", binwidth=2500, col=I("black"), fill=I("green"))+
+  geom_vline(aes(xintercept=mean(datagroup$sum), color="mean"), show.legend=TRUE, linetype="dashed")+
+  geom_vline(aes(xintercept=median(datagroup$sum), color="median"), show.legend=TRUE)+
+  labs(x="Daily Steps", y="Frequency", title="Histogram of Steps per Day") +
+  scale_color_manual(name = "statistics", values = c(median = "blue", mean = "black"))
+  
+g
+```
+
+The average steps per day:
+```{r avg steps with NAs, echo=TRUE}
+mean(datagroup$sum, na.rm=TRUE)
+```
+
+The median steps per day:
+```{r median steps with NAs, echo=TRUE}
+median(datagroup$sum, na.rm=TRUE)
+```
+
 ## What is the average daily activity pattern?
 
+
+The below script takes the data provided in the activity file and groups it by interval and summarizes the data into average steps within each interval.
+
+```{r data by interval with NAs, echo=TRUE}
+datagroup2<- data %>% 
+  group_by(interval) %>% 
+  summarise(Step_Avg= mean(steps, na.rm=TRUE))
+
+head(datagroup2)
+```
+
+
+
+Next, a plot is constructed in a line plot of the average steps taken at each interval.
+```{r line plot by interval with NAs, echo=TRUE}
+g2<-ggplot(datagroup2, aes(x=interval, y=Step_Avg))+geom_line()+labs(x="Interval",y="Avg Steps" )
+
+
+g2
+```
+
+
+
+The average maximum steps are taken at interval 835 or 8:35.
+
+```{r max avg steps interval with NAs, echo=TRUE}
+max<-which.max(datagroup2$Step_Avg)
+
+imax<-datagroup2[max,1]
+
+imax[[1]]
+```
 
 
 ## Imputing missing values
 
 
 
+
+The above data all includes missing values and NAs as a resultant in the data set.  This will skew what the actual data should have been.  To get a better representation of the data this will require imputing data.  For this we will use the r package mice.  The code below shows the number of missing data in the dataset.
+
+```{r number of NAs, echo=TRUE}
+Nas<-sum(is.na(data$steps))
+dim(data)
+Nas
+
+```
+
+The below code utilizes the mice package to model the data and impute missing values into the data set. For the purpose of reproducibility for the model we will set the seed equal to a constant. This ouptuts a data set the same dimensions as our initial data set with 0 values and steps imputed for NAs.
+
+```{r data impute with mice, echo=TRUE}
+library(mice)
+impute<-mice(data,m=5,  seed=245435)
+imputedata<-complete(impute, 5)
+head(imputedata)
+dim(imputedata)
+Nas<-sum(is.na(imputedata$steps))
+Nas
+```
+
+You will see the difference in the histogram as the number of days with 0 steps taken is now zero and the average steps taken have increased as well as the median.
+```{r histogram for impute with mice, echo=TRUE}
+
+datagroup3<- imputedata %>% 
+  group_by(date) %>% 
+  summarise(sum= sum(steps, na.rm=TRUE))
+
+
+g2<-qplot(datagroup3$sum, geom="histogram", binwidth=2500, col=I("black"), fill=I("green"))+
+  geom_vline(aes(xintercept=mean(datagroup3$sum), color="mean"), show.legend=TRUE, linetype="dashed")+
+  geom_vline(aes(xintercept=median(datagroup3$sum), color="median"), show.legend=TRUE)+
+  labs(x="Daily Steps", y="Frequency", title="Histogram of Steps per Day") +
+  scale_color_manual(name = "statistics", values = c(median = "blue", mean = "black"))
+
+g2
+
+mean(datagroup$sum, na.rm=TRUE)
+
+median(datagroup$sum, na.rm=TRUE)
+```
+
+Now that the data has been imputed and corrected for the days with 0 step totals coerced by the NA values the data follows a normal distribution. 
+
 ## Are there differences in activity patterns between weekdays and weekends?
+Looking at the imputed data we will now look to see if there is a difference between steps taken on weekdays vs weekends.  To do this we must add a variable to the dataset indicating if there is a weekday or a weekend.  For this we will use the lubridate and chron packages.
+
+```{r weekday vs weekend data set, echo=TRUE}
+library(lubridate)
+library(chron)
+
+##converts date from character to a date time
+data$date <- as.Date(strptime(data$date, format="%Y-%m-%d"))
+
+imputedata$weekends<-is.weekend(imputedata$date)
+
+
+datagroupweekend<- imputedata %>%  
+  group_by(interval, weekends) %>% 
+  summarise(sum= mean(steps, na.rm=TRUE))%>%
+  mutate(weekday = case_when(weekends==FALSE ~ "Weekday", weekends==TRUE ~ "Weekend")) 
+ 
+head(datagroupweekend)
+
+
+
+g<-ggplot(datagroupweekend, aes(interval, sum))+
+  geom_line(aes(colour=factor(as.factor(datagroupweekend$weekday)))) +
+  labs(x="Interval", y="Steps", title="Total Steps by Interval", colour="Weekend or Weekday") + 
+  facet_grid(weekday~.)
+
+g
+```
+
+
